Atualização link GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>DSMovie</h1>
             <div class="dsmovie-contact-container">
                 <img src="img/github.svg" alt="Github">
-                <a href="https://github.com/devsuperior">/devsuperior</a>
+                <a href="https://github.com/adnoramos/dsmovie1">/devsuperior</a>
             </div>
         </nav>
     </header>
@@ -51,12 +51,12 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
@@ -72,15 +72,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -92,15 +93,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -112,15 +114,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -132,15 +135,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -152,15 +156,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -172,15 +177,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -192,15 +198,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -212,15 +219,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -232,15 +240,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -252,15 +261,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
@@ -272,15 +282,16 @@
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
                                 <div>
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-full.svg" alt="Star">
-                                <img src="img/star-half.svg" alt="Star">
-                                <img src="img/star-empty.svg" alt="Star">
-                            </div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
                             </div>
                             <p>10 avaliações</p>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>                        </div>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div>
             </div>
